# criptopipe

./: README.md  pyproject.toml
criptopipe/: .env.example  README.md  docker-compose.yml  setup_project_structure.py
criptopipe/src/criptopipe/config/: logger.py  settings.py
criptopipe/src/criptopipe/dashboard/: app.py
criptopipe/src/criptopipe/data/raw/: mongo.py
criptopipe/src/criptopipe/etl/: pipeline.py
criptopipe/src/criptopipe/etl/extractor/: api_binance.py  api_client.py  api_coinbase.py  api_extractor.py  api_mercadobitcoin.py
criptopipe/src/criptopipe/etl/loader/: mongodb.py  postgresql.py
criptopipe/src/criptopipe/etl/transformer/: clean_data.py
criptopipe/tests/: test_etl.py
